Fluxo de Pedido (#33)
* Fluxo de Pedido

* Pagamento service test

* Including pedido service test

* Removing unused source