@@ -1,5 +1,10 @@
 package br.com.fiap.techchallenge.infrastructure.entity;
 
+import java.math.BigDecimal;
+import java.util.List;
+import java.util.UUID;
+import java.util.stream.Collectors;
+
 import br.com.fiap.techchallenge.domain.Produto;
 import br.com.fiap.techchallenge.domain.enums.Tipo;
 import br.com.fiap.techchallenge.infrastructure.entity.enums.TipoEntity;
@@ -14,10 +19,6 @@ import lombok.AllArgsConstructor;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
-
-import java.math.BigDecimal;
-import java.util.List;
-import java.util.UUID;
 
 @Entity
 @Getter
@@ -41,12 +42,29 @@ public class ProdutoEntity {
     @Enumerated(EnumType.STRING)
     private TipoEntity tipo;
 
-    public static ProdutoEntity criaEntity(Produto produto) {
-        List<IngredienteEntity> ingredientesEntity = produto.getIngredientes().stream().map(IngredienteEntity::criaEntity).toList();
-        return new ProdutoEntity(produto.getId(), produto.getNome(), produto.getDescricao(), produto.getPreco(), ingredientesEntity, TipoEntity.valueOf(produto.getTipo().name()));
+    public Produto toDomain() {
+        return Produto.criaProduto(id, nome, preco, descricao,
+            ingredientes.stream().map(IngredienteEntity::toDomain).toList(), Tipo.fromValue(this.tipo.getValue()));
     }
 
-    public Produto toDomain() {
-        return Produto.criaProduto(id, nome, preco, descricao, ingredientes.stream().map(IngredienteEntity::toDomain).toList(), Tipo.fromValue(this.tipo.getValue()));
+    public static List<Produto> toDomain(List<ProdutoEntity> produtoEntities) {
+        return produtoEntities.stream()
+            .map(ProdutoEntity::toDomain)
+            .collect(Collectors.toList());
+    }
+
+    public static ProdutoEntity toEntity(Produto produto) {
+        List<IngredienteEntity> ingredientesEntity = produto.getIngredientes().stream()
+            .map(IngredienteEntity::criaEntity).toList();
+
+        return new ProdutoEntity(produto.getId(), produto.getNome(), produto.getDescricao(), produto.getPreco(),
+            ingredientesEntity,
+            TipoEntity.valueOf(produto.getTipo().name()));
+    }
+
+    public static List<ProdutoEntity> toEntity(List<Produto> produtos) {
+        return produtos.stream()
+            .map(ProdutoEntity::toEntity)
+            .collect(Collectors.toList());
     }
 }
